# inference_inferno

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  Changelog.md  Changelog.txt  Doxyfile.in  LICENSE.md  README.md  mainpage.dox
cmake/modules/: FindGUROBI.cmake  FindINFERNO_EXTERNALS.cmake  INFERNO_ADD_NUMPY_MODULE.cmake
include/inferno/: discrete_value_table.hxx  factor.hxx  inferno.hxx  inferno_keywords.hxx  inferno_python.hxx  mixed_label.hxx  mixed_label_vec.hxx  model.hxx  model_fac_info.hxx  model_info.hxx  model_var_info.hxx  small_vector.hxx  variable_space.hxx
include/inferno/constraint_tables/: discrete_constraint_table_base.hxx
include/inferno/constraints/: base_discrete_constaint.hxx
include/inferno/inference/: base_discrete_inference.hxx  base_discrete_inference_factory.hxx  cgc.hxx  cgc_mmwc.hxx  discrete_inference_base.hxx  ehc.hxx  higher_order_qpbo.hxx  hmmwc.hxx  icm.hxx  inference_options.hxx  lp_inference.hxx  mp.hxx  multicut.hxx  new_base_discrete_inference.hxx  opengm_inference.hxx  qpbo.hxx  visitors.hxx
include/inferno/learning/: learning.hxx  weight_constraints.hxx  weights.hxx
include/inferno/meta/: meta.hxx
inferno-externals/: CMakeLists.txt  README.md
inferno-externals/gco/files/: CMakeLists.txt
inferno-externals/ibfs/files/: CMakeLists.txt
inferno-externals/qpbo/: CMakeLists.txt
inferno-externals/qpbo/files/: CMakeLists.txt
inferno-externals/trws/files/: CMakeLists.txt
sandbox/: factory.py  fu.py  fu_mp.py  lmc.tex  lmulticut_learning.py  mmwc.py  multicut_learning.py
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cxx  inferno_vs_opengm.cxx  inferno_vs_opengm2.cxx  inferno_vs_opengm_potts.cxx  inferno_vs_opengm_unaries.cxx  just_unaries.cxx  nb.cxx  new_benchmark.cxx
src/examples/: CMakeLists.txt
src/examples/cxx/: CMakeLists.txt  grid_2d_non_shared_non_submodular.cxx  very_simple_multicut_model.cxx  very_simple_potts_model.cxx
src/examples/python/learning/: inaccurate_ground_truth.py  interactive_seg.py
src/examples/python/learning/neuro_proof_2d/: main.py  make_ds.py
src/inferno/: CMakeLists.txt  factor.cxx  inferno.cxx  mixed_label.cxx  mixed_label_vec.cxx  model.cxx  model_fac_info.cxx  model_info.cxx  model_var_info.cxx  small_vector.cxx  variable_space.cxx
src/python/: CMakeLists.txt
src/python/module/: core
src/python/module/inferno/: __init__.py
src/python/module/inferno/benchmark/: __init__.py
src/python/module/inferno/inference/: __init__.py
src/python/module/inferno/learning/: __init__.py
src/python/module/inferno/learning/dataset/: __init__.py
src/python/module/inferno/learning/loss_functions/: __init__.py
src/python/module/inferno/models/: __init__.py
src/python/module/inferno/value_tables/: __init__.py
src/python/py_include/: model_helper.hxx
src/python/sandbox/: foo.py
src/python/src/: CMakeLists.txt
src/python/src/benchmark/: CMakeLists.txt  bench_potts.cxx  benchmarkCore.cxx
src/python/src/core/: CMakeLists.txt  core.cxx  factor.cxx  model.cxx  small_vector.cxx  stdVector.cxx
src/python/src/inference/: CMakeLists.txt  base_discrete_inference.cxx  edge_hamming_loss_augmented_model_inference.cxx  exportInference.hxx  general_discrete_model_inference.cxx  inference.cxx  inference_options.cxx  modified_multiwaycut_model_inference.cxx  parametrzied_multicut_model_inference.cxx  visitors.cxx
src/python/src/inference/factories/: default_factory.hxx  ehc.hxx  multicut.hxx  qpbo.hxx
src/python/src/learning/: CMakeLists.txt  learning.cxx  regularizer.cxx  weight_constraints.cxx  weights.cxx
src/python/src/learning/dataset/: CMakeLists.txt  dataset.cxx  default_dataset_parametrized_multicut_model.cxx  export_vector_dataset.hxx  vector_dataset_general_discrete_model.cxx  vector_dataset_parametrized_multicut_model.cxx
src/python/src/learning/learners/: CMakeLists.txt  export_igo.hxx  export_stochastic_gradient.hxx  export_subgradient.hxx  igo_general_discrete_model.cxx  igo_parametrized_multicut_model.cxx  learners.cxx  learners_parametrized_multicut_model.cxx  stochastic_gradient_general_discrete_model.cxx  stochastic_gradient_parametrized_multicut_model.cxx  subgradient_general_discrete_model.cxx  subgradient_parametrized_multicut_model.cxx
src/python/src/learning/loss_functions/: CMakeLists.txt  CMakeLists.txt~  edge_hamming_general_discrete_model.cxx  edge_hamming_parametrized_multicut_model.cxx  export_edge_hamming.hxx  export_variation_of_information.hxx  loss_functions.cxx  loss_functions_parametrized_multicut_model.cxx  variation_of_information_general_discrete_model.cxx  variation_of_information_parametrized_multicut_model.cxx
src/python/src/models/: CMakeLists.txt  edge_hamming_loss_augmented_model.cxx  exportModels.hxx  general_discrete_model.cxx  general_discrete_tl_model.cxx  models.cxx  modified_multiwaycut_model.cxx  parametrized_multicut_model.cxx
src/python/src/value_tables/: CMakeLists.txt  base_discrete_value_table.cxx  exportValueTables.hxx  value_tables.cxx
src/python/test/: test_model.py
src/src_include/: benchmark.hxx  gen_random.py  reference_models.hxx  rep_rand.hxx  reproducible_pseudo_random.hxx
src/test/: CMakeLists.txt  test_external_qpbo.cxx  test_externals_qpbo.cxx  test_factor.cxx  test_mixed_label.cxx  test_model.cxx  test_shape_walker.cxx
src/test/inference/: CMakeLists.txt  test_externals_qpbo.cxx  test_multicut.cxx
src/test/inference/utilities/: CMakeLists.txt  test_lp_solver.cxx  test_movemaker.cxx
src/test/learning/: CMakeLists.txt  test_learning.cxx  test_multicut_learning.cxx
src/test/model/: CMakeLists.txt  test_discrete_lemon_model.cxx  test_factor.cxx  test_mmwc.cxx  test_model.cxx  test_parametrized_multicut_model.cxx  test_sparse_model.cxx  test_tl_model.cxx  test_tl_model2.cxx  test_view_submodel.cxx
src/test/test_include/inferno_test/: test.hxx
src/test/test_python/: test_learning.py  test_model.py
src/test/utilities/: CMakeLists.txt  test_ideas.cxx  test_mixed_label.cxx  test_shape_walker.cxx
src/test/value_tables/: CMakeLists.txt  test_constraints.cxx  test_value_tables.cxx
(+123 files in other folders)
