#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
#add_subdirectory(inferno-externals)


#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(inferno)


#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(test)


#-------------------------------------------------------------------------------------------------------------------
# inferno example directory
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(examples)

#-------------------------------------------------------------------------------------------------------------------
# inferno python directory
#-------------------------------------------------------------------------------------------------------------------
#add_subdirectory(python)
