file(GLOB_RECURSE headers src_include/*.hxx)
include_directories(src_include)

#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
#add_subdirectory(inferno-externals)


#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(inferno)


#-------------------------------------------------------------------------------------------------------------------
# inferno library directory
#-------------------------------------------------------------------------------------------------------------------
IF(BUILD_TEST)
add_subdirectory(test)
ENDIF()
#-------------------------------------------------------------------------------------------------------------------
# inferno example directory
#-------------------------------------------------------------------------------------------------------------------
IF(BUILD_EXAMPLES)
add_subdirectory(examples)
ENDIF()
#-------------------------------------------------------------------------------------------------------------------
# inferno python directory
#-------------------------------------------------------------------------------------------------------------------
IF(BUILD_PYTHON_PACKAGE) 
    add_subdirectory(python)
ENDIF(BUILD_PYTHON_PACKAGE)

#-------------------------------------------------------------------------------------------------------------------
# inferno python directory
#-------------------------------------------------------------------------------------------------------------------
IF(BUILD_BENCHMARK)
    add_subdirectory(benchmark)
ENDIF(BUILD_BENCHMARK)
