
#-------------------------------------------------------------------------------------------------------------------
# inferno library
#-------------------------------------------------------------------------------------------------------------------
add_library(inferno SHARED
inferno.cxx
small_vector.cxx
mixed_label.cxx
factor.cxx
model.cxx
)
