
#-------------------------------------------------------------------------------------------------------------------
# inferno library
#-------------------------------------------------------------------------------------------------------------------
add_library(inferno SHARED
    inferno.cxx
    mixed_label.cxx
)
