#-------------------------------------------------------------------------------------------------------------------
# inferno python  core module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(core)


#-------------------------------------------------------------------------------------------------------------------
# inferno python  core module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(benchmark)
