#-------------------------------------------------------------------------------------------------------------------
# inferno python  core module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(core)

#-------------------------------------------------------------------------------------------------------------------
# inferno python  models module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(models)

#-------------------------------------------------------------------------------------------------------------------
# inferno python  value_tables module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(value_tables)


#-------------------------------------------------------------------------------------------------------------------
# inferno python  inference module
#-------------------------------------------------------------------------------------------------------------------
#add_subdirectory(inference)


#-------------------------------------------------------------------------------------------------------------------
# inferno python  bechmark module
#-------------------------------------------------------------------------------------------------------------------
#add_subdirectory(benchmark)


#-------------------------------------------------------------------------------------------------------------------
# inferno python  learning module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(learning)

